--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "cat": "pwd",
-    "dog": "cd .. && pwd"
+    "watch": "babel src -d dest -w --compact=true --source-maps",
+    "compile": "babel src -d dest --compact=true --source-maps",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
